<resources>
    <string name="app_name">Hadan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_gastPersonales">GASTOS PERSONALES</string>
    <string name="btn_simCredito">simulador credito</string>
    <string name="simCredito">SIMULADOR CREDITO</string>
    <string name="emptyString"> </string>
    <string name="prestamoValor">¿Cuánto vas a prestar?</string>
    <string name="simInteres">¿Cual es la tasa de interés?</string>
    <string name="simPlazo">¿A cuántos meses lo vas a prestar?</string>
    <string name="btnSimulador">Calcular</string>
    <string name="cuota">Cuota</string>
    <string name="abono_a_capital">Abono a capital</string>
    <string name="intereses">Intereses</string>
    <string name="saldo">Saldo</string>
    <string name="valor_de_la_cuota">V. de la cuota</string>
    <string name="resumen_de_su_credito">RESUMEN DE SU CREDITO</string>
    <string name="tasa_de_inter_s">Tasa de Interés:</string>
    <string name="plazo">Plazo:</string>
    <string name="intereses_totales">Intereses totales:</string>
    <string name="dinero_a_prestar">Dinero a prestar:</string>
    <string name="simInversiones">SIMULADOR INVERSIONES</string>
    <string name="ganancias_totales">ganancias totales</string>
    <string name="resumen_de_su_inversio">RESUMEN DE SU INVERSION</string>
</resources>