<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cuota"
            android:text="@string/cuota"
            style="@style/simcredito_list_item_style" />

        <TextView
            android:id="@+id/abonoCapital"
            style="@style/simcredito_list_item_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abono_a_capital" />

        <TextView
            android:id="@+id/intereses"
            style="@style/simcredito_list_item_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intereses" />

        <TextView
            android:id="@+id/saldo"
            style="@style/simcredito_list_item_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saldo" />

        <TextView
            android:id="@+id/vCuota"
            style="@style/simcredito_list_item_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_de_la_cuota" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>